@@ -1,4 +1,8 @@
 2013-08-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amfetchdump.pl: Print applicationstdout to debug file and
+	  stderr.
+
+2013-08-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Process.pm: Be less scrict on perl binary name.
 
 2013-08-09  Jean-Louis Martineau <martineau@zmanda.com>
